--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#about">About Me</a></li>
                     <li><a href="#contact">Contact</a></li>
+                    <li><a href="#resume">Resume</a></li>
                 </ul>
             </nav>
         </div>
@@ -40,22 +41,17 @@
                     <img src="images/Lava_O3.gif" alt="Lava O3">
                     <a href="https://www.behance.net/gallery/221737249/Lava-O3-Redefining-Performance-and-Style" target="_blank">Lava O3</a>
                 </div>
-                <!-- Add the rest of your projects -->
                 <div class="project">
-                    <img src="images/VAST.gif" alt="VAST">
+                    <img src="images/Vast.png" alt="Vast">
                     <a href="https://www.behance.net/gallery/197347117/VAST-Journey-to-the-Cosmos" target="_blank">VAST</a>
                 </div>
                 <div class="project">
-                    <img src="images/Casio.gif" alt="Casio">
+                    <img src="images/Casio.png" alt="Casio">
                     <a href="https://www.behance.net/gallery/210212511/Casio" target="_blank">Casio</a>
                 </div>
                 <div class="project">
-                    <img src="images/Lava_ProBuds.gif" alt="Lava ProBuds">
+                    <img src="images/ProBuds.jpg" alt="Lava ProBuds">
                     <a href="https://www.behance.net/gallery/201361809/Lava-ProBuds" target="_blank">Lava ProBuds</a>
-                </div>
-                <div class="project">
-                    <img src="images/Lava_Prowatch_X.gif" alt="Lava Prowatch X">
-                    <a href="https://www.behance.net/gallery/217335825/Lava-Prowatch-X" target="_blank">Lava Prowatch X</a>
                 </div>
             </div>
         </div>
@@ -83,11 +79,18 @@
         </div>
     </section>
 
+    <section id="resume">
+        <div class="container">
+            <h2>Download My Resume</h2>
+            <a href="path_to_resume.pdf" target="_blank">Click here to download my resume</a>
+        </div>
+    </section>
+
     <section id="contact">
         <div class="container">
             <p>If you want to work together or have a project in mind, feel free to get in touch.</p>
-            <p><a href="mailto:anshulmahajan752@gmail.com">Send me an Email</a></p>
             <div class="social-links">
+                <a href="mailto:anshulmahajan752@gmail.com">Send me an Email</a>
                 <a href="https://www.behance.net/anshulmahajan" target="_blank">Behance</a>
                 <a href="https://www.linkedin.com/in/anshul-mahajan" target="_blank">LinkedIn</a>
                 <a href="https://www.instagram.com/anshul_3d/" target="_blank">Instagram</a>
