--- a/index.html
+++ b/index.html
@@ -121,47 +121,64 @@
 
 <section id="portfolio">
     <div class="container">
-        <h2>Portfolio Highlights</h2>
-        <div class="portfolio-grid">
-            <div class="portfolio-item">
-                <img src="Pebble_Neo.gif" alt="Pebble Neo">
-                <div class="project-info">
-                    <p>Pebble Neo</p>
+        <h2>Portfolio</h2>
+        <div class="portfolio-item">
+            <div class="portfolio-image">
+                <img src="Casio.png" alt="Casio" />
+                <div class="portfolio-text">
+                    <h3>Casio</h3>
                 </div>
             </div>
-            <div class="portfolio-item">
-                <img src="Lava_O3.gif" alt="Lava O3">
-                <div class="project-info">
-                    <p>Lava O3</p>
+            <p>A detailed product render showcasing Casio's latest timepiece.</p>
+        </div>
+        <div class="portfolio-item">
+            <div class="portfolio-image">
+                <img src="Lava_O3.gif" alt="Lava O3" />
+                <div class="portfolio-text">
+                    <h3>Lava O3</h3>
                 </div>
             </div>
-            <div class="portfolio-item">
-                <img src="Lava_Prowatch.gif" alt="Lava Prowatch">
-                <div class="project-info">
-                    <p>Lava Prowatch</p>
+            <p>Reimagining style and performance with the Lava O3 smartphone.</p>
+        </div>
+        <div class="portfolio-item">
+            <div class="portfolio-image">
+                <img src="Lava_Prowatch.gif" alt="Lava ProWatch" />
+                <div class="portfolio-text">
+                    <h3>Lava ProWatch</h3>
                 </div>
             </div>
-            <div class="portfolio-item">
-                <img src="ProBuds.jpg" alt="ProBuds">
-                <div class="project-info">
-                    <p>ProBuds</p>
+            <p>The Lava ProWatch, merging technology with design.</p>
+        </div>
+        <div class="portfolio-item">
+            <div class="portfolio-image">
+                <img src="Pebble_Neo.gif" alt="Pebble Neo" />
+                <div class="portfolio-text">
+                    <h3>Pebble Neo</h3>
                 </div>
             </div>
-            <div class="portfolio-item">
-                <img src="Vast.png" alt="Vast">
-                <div class="project-info">
-                    <p>Vast</p>
+            <p>Explore the simplicity and elegance of the Pebble Neo.</p>
+        </div>
+        <div class="portfolio-item">
+            <div class="portfolio-image">
+                <img src="ProBuds.jpg" alt="ProBuds" />
+                <div class="portfolio-text">
+                    <h3>ProBuds</h3>
                 </div>
             </div>
-            <div class="portfolio-item">
-                <img src="Casio.png" alt="Casio">
-                <div class="project-info">
-                    <p>Casio</p>
+            <p>ProBuds - A stylish audio companion for your daily needs.</p>
+        </div>
+        <div class="portfolio-item">
+            <div class="portfolio-image">
+                <img src="Vast.png" alt="Vast" />
+                <div class="portfolio-text">
+                    <h3>Vast</h3>
                 </div>
             </div>
+            <p>Vast - A journey to the cosmos captured in every frame.</p>
         </div>
     </div>
 </section>
+
 
 <section id="about">
     <div class="container">
