--- a/index.html
+++ b/index.html
@@ -124,40 +124,52 @@
         <h2>Portfolio</h2>
         <div class="portfolio-grid">
             <div class="portfolio-item">
-                <img src="Pebble_Neo.gif" alt="Pebble Neo">
-                <div class="project-info">
-                    <p>Pebble Neo</p>
-                </div>
+                <a href="https://www.behance.net/gallery/220961207/Pebble-Neo-Redefining-Everyday-Elegance" target="_blank">
+                    <img src="Pebble_Neo.gif" alt="Pebble Neo">
+                    <div class="project-info">
+                        <p>Pebble Neo</p>
+                    </div>
+                </a>
             </div>
             <div class="portfolio-item">
-                <img src="Lava_O3.gif" alt="Lava O3">
-                <div class="project-info">
-                    <p>Lava O3</p>
-                </div>
+                <a href="https://www.behance.net/gallery/221737249/Lava-O3-Redefining-Performance-and-Style" target="_blank">
+                    <img src="Lava_O3.gif" alt="Lava O3">
+                    <div class="project-info">
+                        <p>Lava O3</p>
+                    </div>
+                </a>
             </div>
             <div class="portfolio-item">
-                <img src="Lava_Prowatch.gif" alt="Lava Prowatch">
-                <div class="project-info">
-                    <p>Lava Prowatch</p>
-                </div>
+                <a href="https://www.behance.net/gallery/217335825/Lava-Prowatch-X" target="_blank">
+                    <img src="Lava_Prowatch.gif" alt="Lava Prowatch">
+                    <div class="project-info">
+                        <p>Lava Prowatch</p>
+                    </div>
+                </a>
             </div>
             <div class="portfolio-item">
-                <img src="ProBuds.jpg" alt="ProBuds">
-                <div class="project-info">
-                    <p>ProBuds</p>
-                </div>
+                <a href="https://www.behance.net/gallery/201361809/Lava-ProBuds" target="_blank">
+                    <img src="ProBuds.jpg" alt="ProBuds">
+                    <div class="project-info">
+                        <p>ProBuds</p>
+                    </div>
+                </a>
             </div>
             <div class="portfolio-item">
-                <img src="Vast.png" alt="Vast">
-                <div class="project-info">
-                    <p>Vast</p>
-                </div>
+                <a href="https://www.behance.net/gallery/197347117/VAST-Journey-to-the-Cosmos" target="_blank">
+                    <img src="Vast.png" alt="Vast">
+                    <div class="project-info">
+                        <p>Vast</p>
+                    </div>
+                </a>
             </div>
             <div class="portfolio-item">
-                <img src="Casio.png" alt="Casio">
-                <div class="project-info">
-                    <p>Casio</p>
-                </div>
+                <a href="https://www.behance.net/gallery/210212511/Casio" target="_blank">
+                    <img src="Casio.png" alt="Casio">
+                    <div class="project-info">
+                        <p>Casio</p>
+                    </div>
+                </a>
             </div>
         </div>
     </div>
