--- a/index.html
+++ b/index.html
@@ -124,52 +124,46 @@
         <h2>Portfolio</h2>
         <div class="portfolio-grid">
             <div class="portfolio-item">
-                <a href="https://www.behance.net/gallery/220961207/Pebble-Neo-Redefining-Everyday-Elegance" target="_blank">
-                    <img src="Pebble_Neo.gif" alt="Pebble Neo">
-                    <div class="project-info">
-                        <p>Pebble Neo</p>
-                    </div>
-                </a>
+                <img src="Pebble_Neo.gif" alt="Pebble Neo">
+                <div class="project-info">
+                    <p>Pebble Neo</p>
+                </div>
             </div>
             <div class="portfolio-item">
-                <a href="https://www.behance.net/gallery/221737249/Lava-O3-Redefining-Performance-and-Style" target="_blank">
-                    <img src="Lava_O3.gif" alt="Lava O3">
-                    <div class="project-info">
-                        <p>Lava O3</p>
-                    </div>
-                </a>
+                <img src="Lava_O3.gif" alt="Lava O3">
+                <div class="project-info">
+                    <p>Lava O3</p>
+                </div>
             </div>
             <div class="portfolio-item">
-                <a href="https://www.behance.net/gallery/217335825/Lava-Prowatch-X" target="_blank">
-                    <img src="Lava_Prowatch.gif" alt="Lava Prowatch">
-                    <div class="project-info">
-                        <p>Lava Prowatch</p>
-                    </div>
-                </a>
+                <img src="Lava_Prowatch.gif" alt="Lava Prowatch">
+                <div class="project-info">
+                    <p>Lava Prowatch</p>
+                </div>
             </div>
             <div class="portfolio-item">
-                <a href="https://www.behance.net/gallery/201361809/Lava-ProBuds" target="_blank">
-                    <img src="ProBuds.jpg" alt="ProBuds">
-                    <div class="project-info">
-                        <p>ProBuds</p>
-                    </div>
-                </a>
+                <img src="ProBuds.jpg" alt="ProBuds">
+                <div class="project-info">
+                    <p>ProBuds</p>
+                </div>
             </div>
             <div class="portfolio-item">
-                <a href="https://www.behance.net/gallery/197347117/VAST-Journey-to-the-Cosmos" target="_blank">
-                    <img src="Vast.png" alt="Vast">
-                    <div class="project-info">
-                        <p>Vast</p>
-                    </div>
-                </a>
+                <img src="Vast.png" alt="Vast">
+                <div class="project-info">
+                    <p>Vast</p>
+                </div>
             </div>
             <div class="portfolio-item">
-                <a href="https://www.behance.net/gallery/210212511/Casio" target="_blank">
-                    <img src="Casio.png" alt="Casio">
-                    <div class="project-info">
-                        <p>Casio</p>
-                    </div>
-                </a>
+                <img src="Casio.png" alt="Casio">
+                <div class="project-info">
+                    <p>Casio</p>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <img src="Lava_blaze_3.gif" alt="Lava Blaze 3">
+                <div class="project-info">
+                    <p>Lava Blaze 3</p>
+                </div>
             </div>
         </div>
     </div>
@@ -190,8 +184,8 @@
         <p>If you want to work together or have a project in mind, feel free to get in touch.</p>
         <p><a href="mailto:anshulmahajan752@gmail.com" class="email-link">Send me an Email</a></p>
         <div class="contact-links">
-            <a href="https://www.linkedin.com/in/anshul-mahajan-/" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="https://www.behance.net/anshul_mahajan" target="_blank"><i class="fab fa-behance"></i></a>
+            <a href="https://www.linkedin.com/in/anshulmahajan/" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.behance.net/anshulmahajan" target="_blank"><i class="fab fa-behance"></i></a>
             <a href="https://www.instagram.com/anshul_3d/" target="_blank"><i class="fab fa-instagram"></i></a>
         </div>
     </div>
