--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 </div>
             </div>
             <div class="portfolio-item">
-                <img src="Lava_blaze_3.gif" alt="Lava Blaze 3">
+                <img src="Lava blaze 3.gif" alt="Lava Blaze 3">
                 <div class="project-info">
                     <p>Lava Blaze 3</p>
                 </div>
