--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
         <p>If you want to work together or have a project in mind, feel free to get in touch.</p>
         <p><a href="mailto:anshulmahajan752@gmail.com" class="email-link">Send me an Email</a></p>
         <div class="contact-links">
-            <a href="https://www.linkedin.com/in/anshulmahajan/" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="https://www.behance.net/anshulmahajan" target="_blank"><i class="fab fa-behance"></i></a>
+            <a href="https://www.linkedin.com/in/anshulmahajan-" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.behance.net/anshul_mahajan" target="_blank"><i class="fab fa-behance"></i></a>
             <a href="https://www.instagram.com/anshul_3d/" target="_blank"><i class="fab fa-instagram"></i></a>
         </div>
     </div>
