--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Anshul Mahajan | 3D Product Specialist</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
@@ -24,30 +23,42 @@
     <div class="container">
         <h2>Portfolio</h2>
         <div class="portfolio-grid">
+
             <a href="https://www.behance.net/gallery/223759049/Lava-Blaze-3-5G-Sleek-Design-Powerful-Presence" target="_blank" class="portfolio-item">
                 <img src="Lava blaze 3.gif" alt="Lava Blaze 3">
-                <div class="project-info"><p>Lava Blaze 3</p></div>
+                <div class="project-info">Lava Blaze 3</div>
             </a>
+
             <a href="https://www.behance.net/gallery/220961207/Pebble-Neo-Redefining-Everyday-Elegance" target="_blank" class="portfolio-item">
                 <img src="Pebble_Neo.gif" alt="Pebble Neo">
-                <div class="project-info"><p>Pebble Neo</p></div>
+                <div class="project-info">Pebble Neo</div>
             </a>
+
+            <a href="https://www.behance.net/gallery/221737249/Lava-O3-Redefining-Performance-and-Style" target="_blank" class="portfolio-item">
+                <img src="Lava_O3.gif" alt="Lava O3">
+                <div class="project-info">Lava O3</div>
+            </a>
+
             <a href="https://www.behance.net/gallery/217335825/Lava-Prowatch-X" target="_blank" class="portfolio-item">
-                <img src="Lava_Prowatch.gif" alt="Lava Prowatch">
-                <div class="project-info"><p>Lava Prowatch</p></div>
+                <img src="Lava_Prowatch.gif" alt="Lava Prowatch X">
+                <div class="project-info">Lava Prowatch X</div>
             </a>
+
             <a href="https://www.behance.net/gallery/201361809/Lava-ProBuds" target="_blank" class="portfolio-item">
                 <img src="ProBuds.jpg" alt="ProBuds">
-                <div class="project-info"><p>ProBuds</p></div>
+                <div class="project-info">ProBuds</div>
             </a>
+
             <a href="https://www.behance.net/gallery/210212511/Casio" target="_blank" class="portfolio-item">
                 <img src="Casio.png" alt="Casio">
-                <div class="project-info"><p>Casio</p></div>
+                <div class="project-info">Casio</div>
             </a>
+
             <a href="https://www.behance.net/gallery/197347117/VAST-Journey-to-the-Cosmos" target="_blank" class="portfolio-item">
                 <img src="Vast.png" alt="Vast">
-                <div class="project-info"><p>Vast</p></div>
+                <div class="project-info">Vast</div>
             </a>
+
         </div>
     </div>
 </section>
@@ -55,9 +66,9 @@
 <section id="about">
     <div class="container">
         <h2>About Me</h2>
-        <p>I am an experienced 3D Product Video Specialist and Motion Designer with expertise in creating visually stunning, high-impact content. My proficiency spans Blender, Cinema 4D, Unreal Engine, and other leading tools. I specialize in crafting cinematic 3D product advertisements and visual storytelling.</p>
-        <p>As part of Takila Designs, I deliver high-quality, 15–45 second 3D product videos that showcase product features with intricate details, driven by meticulous lighting and realism. My aim is to produce visual content that is not only beautiful but also deeply engaging.</p>
-        <p>With a dedication to pushing creative boundaries, I bring complex concepts to life through engaging visual narratives.</p>
+        <p>I am an experienced 3D Product Video Specialist and Motion Designer with expertise in creating visually stunning, high-impact content. My proficiency spans Blender, Cinema 4D, Unreal Engine, and other leading tools.</p>
+        <p>I specialize in crafting cinematic 3D product advertisements and visual storytelling. At Takila Designs, I deliver high-quality, 15–45 second 3D product videos that showcase product features with intricate details, driven by meticulous lighting and realism.</p>
+        <p>My aim is to produce visual content that is not only beautiful but also deeply engaging.</p>
     </div>
 </section>
 
