--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
             color: #ff66b2;
             margin: 0 15px;
             text-decoration: none;
-            font-size: 1.2em;
+            font-size: 1.1em;
         }
 
         .container {
             width: 80%;
             margin: 0 auto;
-            text-align: center;
+            text-align: left;
         }
 
         section {
@@ -49,7 +49,7 @@
         }
 
         section h2 {
-            font-size: 2.5em;
+            font-size: 2em;
             margin-bottom: 20px;
             color: #ff66b2;
         }
@@ -116,7 +116,7 @@
         }
 
         #about p, #contact p {
-            font-size: 1.1em;
+            font-size: 1em;
             line-height: 1.5em;
             color: #ccc;
         }
